RESOLVED FIXED26191
We should not need to include xmath.h
https://bugs.webkit.org/show_bug.cgi?id=26191
Summary We should not need to include xmath.h
Dimitri Glazkov (Google)
Reported 2009-06-04 10:41:42 PDT
Per http://connect.microsoft.com/VisualStudio/feedback/ViewFeedback.aspx?FeedbackID=361804, we shouldn't need to include <xmath.h> in MathExtras.h This in turn breaks VS2008 builds with TR1 turned on.
Attachments
Remove xmath, v1. (956 bytes, patch)
2009-06-04 10:44 PDT, Dimitri Glazkov (Google)
eric: review+
Dimitri Glazkov (Google)
Comment 1 2009-06-04 10:44:16 PDT
Created attachment 30951 [details] Remove xmath, v1. JavaScriptCore/ChangeLog | 10 ++++++++++ JavaScriptCore/wtf/MathExtras.h | 2 -- 2 files changed, 10 insertions(+), 2 deletions(-)
Eric Seidel (no email)
Comment 2 2009-06-04 20:17:34 PDT
Comment on attachment 30951 [details] Remove xmath, v1. Assuming you're going to watch and make sure you didn't break the Windows bot, then this is OK with me.
Eric Seidel (no email)
Comment 3 2009-06-12 15:16:53 PDT
Success!
Eric Seidel (no email)
Comment 4 2009-06-12 15:17:34 PDT
Bah, sorry. My commit-script went amuck.
Eric Seidel (no email)
Comment 5 2009-06-12 15:42:07 PDT
Committing to http://svn.webkit.org/repository/webkit/trunk ... M JavaScriptCore/ChangeLog M JavaScriptCore/wtf/MathExtras.h Committed r44633 M JavaScriptCore/wtf/MathExtras.h M JavaScriptCore/ChangeLog r44633 = c2c22c62a94efb33933a7dddfceebe1899f6f229 (trunk) No changes between current HEAD and refs/remotes/trunk Resetting to the latest refs/remotes/trunk
Eric Seidel (no email)
Comment 6 2009-06-12 15:42:54 PDT
Tada! My commit script worked!!! bug 26283
Note You need to log in before you can comment on or make changes to this bug.