2009-06-12  Dimitri Glazkov  <dglazkov@chromium.org>

Reviewed by Eric Seidel.

        https://bugs.webkit.org/show_bug.cgi?id=26191
        Remove xmath include in MathExtras.h, because it is not needed and also
        breaks VS2008 builds with TR1 turned on.

        * wtf/MathExtras.h: Removed xmath include.

Canonical link: https://commits.webkit.org/36451@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@44633 268f45cc-cd09-0410-ab3c-d52691b4dbfc