JavaScriptCore/wtf/MathExtras.h
@@ -41,8 +41,6 @@
 #if COMPILER(MSVC)
 #if PLATFORM(WIN_CE)
 #include <stdlib.h>
-#else
-#include <xmath.h>
 #endif
 #include <limits>
 
